# SignalCoreBitcoinMining

./: .gitignore  ARCHITECTURE.md  Bitcoin Core Node RPC.txt  INTEGRATION_GUIDE.md  Model call.txt  PRODUCTION_GUIDE.md  README.md  README_AGENTS.md  SIGNALCORE_DEPLOYMENT.md  USAGE.md  VALIDATION_REPORT.md  ai_interface.py  bitcoin &model*math.txt  bitcoin_mining_core.py  block_listener.py  block_miner.py  block_sync_controller.py  block_template_fresh.json  block_template_with_payout_fresh.json  complete_level_16000_mining.py  complete_level_16000_mining_unified.py  demo_complete_system.py  final_integration_test.py  how_the_model_works.py  level_16000_hardened_final.py  level_16000_hardened_final1.py  level_16000_hardened_final10.py  level_16000_hardened_final12.py  level_16000_hardened_final13.py  level_16000_hardened_final14.py  level_16000_hardened_final15.py  level_16000_hardened_final2.py  level_16000_hardened_final3.py  level_16000_hardened_final4.py  level_16000_hardened_final5.py  level_16000_hardened_final6.py  level_16000_hardened_final7.py  level_16000_hardened_final8.py  level_16000_hardened_final9.py  level_16000_mining_part2.py  (+39 more)
